--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>batch 3 is just amazing</h1>
+        <h1>Welcome to Nilesh's Node Todo App</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
