modified todo app 1

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Nilesh TODO App</title>
+        <title>Nilesh TODO Applications</title>
         <style>
             a {
                 text-decoration: none;
